# sunshine-control-panel

./: .gitignore.tauri  README.md  TOOLBAR_QUICKSTART.md  TOOL_DEVELOPMENT_GUIDE.md  _redirects  cloudflare-pages-deploy.md  electron-builder.json  package-lock.json  package.json  setup-tauri.sh  vercel.json  vite.config.js  vite.home.config.js  vite.web.config.js
.github/workflows/: deploy-cloudflare-pages.yml
scripts/: build.js  dev-server.js
src-tauri/: Cargo.toml  build.rs  error-404.html  inject-script.js  inject-styles.css  tauri.conf.json
src-tauri/resources/: speech-phrases.json
src-tauri/src/: app.rs  commands.rs  fs_utils.rs  logger.rs  main.rs  proxy_server.rs  sunshine.rs  system.rs  toolbar.rs  tray.rs  update.rs  utils.rs  vdd.rs  windows.rs
src/i18n/: index.js
src/i18n/locales/: bg.js  cs.js  de.js  en.js  en_GB.js  en_US.js  es.js  fr.js  it.js  ja.js  ko.js  pl.js  pt.js  pt_BR.js  ru.js  sv.js  tr.js  uk.js  zh.js  zh_TW.js
src/main/: main.js  menu.js  paths.js  preload.js  preload.mjs  sunshineConfig.js  utils.js  vddSettings.js
src/main/i18n/: README.md  index.js  languageSwitcher.js
src/main/i18n/locales/: de-DE.json  en-US.json  fr-FR.json  ja-JP.json  ko-KR.json  zh-CN.json
src/main/natpierce/: index.js
src/main/preload/: index.mjs  tinyworld.mjs
src/main/static/: placeholder.html  supportedLanguages.js
src/main/styles/: reset.css
src/renderer/: App.vue  dashboard.html  idd-setting.html  index.html  main.js  placeholder-loader.js  placeholder.html  style.css  sunshine-frame.html  sunshine-frame.js  tauri-adapter.js  tauri-polyfill.js
src/renderer/about/: index.html
src/renderer/components/: HelloWorld.vue  SidebarMenu.vue  SunshineFrame.vue  SunshineLoader.vue  SystemTools.vue  UpdateDialog.vue  VddSettings.vue  welcome.vue
src/renderer/composables/: useRouter.js  useSidebarState.js  useTools.js  useWindowControls.js
src/renderer/console/: LogConsoleApp.vue  drag-drop-demo.html  index.html  main.js
src/renderer/dashboard/: index.html  index.vue
src/renderer/desktop/: DesktopApp.vue  README.md  desktop.less  index.html  main.js
src/renderer/desktop/components/: DesktopCard.vue  DesktopGrid.vue  DesktopSidebar.vue  DesktopWindow.vue  README.md  TitleBar.vue  WindowControls.vue  index.js
src/renderer/desktop/composables/: index.js  useWindowControls.js
src/renderer/desktop/icons/: IconDashboard.vue  IconDevices.vue  IconSettings.vue  IconStream.vue  IconTools.vue
src/renderer/desktop/views/: DashboardView.vue  DevicesView.vue  SettingsView.vue  StreamView.vue  ToolsView.vue
src/renderer/dpi-adjuster/: DpiAdjusterApp.vue  README.md  index.html  main.js
src/renderer/home/: i18n.js  index.html  index.vue  main.js
src/renderer/log-console/: LogConsoleApp.less
src/renderer/pin/: index.html
src/renderer/stop-clock-canvas/: index.html
src/renderer/styles/: SidebarMenu.less  dialog.less  global.less  mixins.less  theme.less  variables.less
src/renderer/tool-window/: ToolWindow.vue  index.html  main.js
src/renderer/tool-window/tools/: BitrateTool.vue  DpiAdjusterTool.vue  ShortcutsTool.vue  shortcuts.md
src/renderer/toolbar/: ToolbarApp.vue  index.html  main.js
src/renderer/vdd/: index.html  index.vue  main.js
