[package]
name = "sunshine-gui"
version = "0.2.3"
description = "A GUI for sunshine"
authors = ["qiin2333"]
license = ""
repository = "https://github.com/qiin2333/sunshine"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [ "tray-icon", "native-tls-vendored"] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-single-instance = "2.0"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.19"
wmi = "0.13"
quick-xml = { version = "0.36", features = ["serialize"] }
encoding_rs = "0.8"
regex = "1.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
dirs = "5.0"
futures-util = "0.3"
bytes = "1.5"
log = "0.4"
env_logger = "0.11"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"

